[fix] player one controler not being visible on mobile

--- a/src/nginx/html/styles/game.css
+++ b/src/nginx/html/styles/game.css
@@ -344,6 +344,10 @@
 	width: 100vw;
 	align-items: center;
 	justify-content: space-around;
+	touch-action: none;
+	* {
+		touch-action: none;
+	}
 }
 
 #controlerPlayerOne, #controlerPlayerTwo{
